<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_usuarios" />

        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_produtos" />

        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_sobre" />
    </group>
</menu>
